--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "Anastasiia Skliarovska <skliarovskaa@gmail.com>",
@@ -13,6 +16,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.26.0",
+    "@redocly/cli": "^1.34.3",
     "eslint": "^9.26.0",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
@@ -32,6 +36,7 @@
     "mongoose": "^8.14.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
-    "pino-http": "^10.4.0"
+    "pino-http": "^10.4.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
