--- a/swagger/path/auth/post.login.yaml
+++ b/swagger/path/auth/post.login.yaml
@@ -40,7 +40,16 @@ responses:
               type: string
               example: Successfully logged in an user
             data:
-              $ref: ../../components/schemas/user.yaml
+              type: object
+              required:
+                - user
+                - token
+              properties:
+                user:
+                  $ref: ../../components/schemas/user.yaml
+                token:
+                  type: string
+                  description: Access token
   '401':
     $ref: ../../components/responses/401.yaml
   '500':
