--- a/swagger/path/contacts/get.yaml
+++ b/swagger/path/contacts/get.yaml
@@ -34,7 +34,7 @@ parameters:
       enum: ['work', 'home', 'personal']
       example: work
   - in: query
-    name: isFavourite
+    name: isFavorite
     schema:
       type: boolean
       example: false
